--- a/styles/style.css
+++ b/styles/style.css
@@ -5,35 +5,58 @@ html {
 }
 
 body {
-    width: 1280px;
-    margin: 0 auto 64px auto;
+    width: 67vw;
+    margin: 0 auto 0 auto;
     background-color: #fcfcfc;
+}
+
+.headline-img {
+    width: 100%;
+    height: 26vw;
+    overflow: hidden;
+}
+
+header img {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 article {
     margin: 0 auto;
-    padding: 64px;
+    padding: 0 64px 64px;
+    max-width: 100%;
 }
 
 section {
-    margin: 16 auto;
+    margin: 16px auto;
 }
 
 .note-card {
     background-color: #ebebeb;
     margin: 0;
-    padding: 1px 24px;
+    padding: 24px 24px;
 }
 
-img {
+figure.serving-suggestions {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    gap: 2%;
+    height: 22vw;
+}
+
+.serving-suggestions img {
     display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto;
+    margin: 0;
+    width: 48%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 h1 {
-    margin-top: 0;
     color:#a10000;
     font-size: 40px;
 }
