--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,12 @@ section {
     margin-bottom: 1.5rem;
 }
 
+.ingredients__heading {
+    display: flex;
+    align-items: baseline;
+    gap: 0.4rem;
+}
+
 /* ----------------------- */
 /* 3. COMPONENTS */
 /* ----------------------- */
@@ -85,7 +91,8 @@ h1 {
     font-size: clamp(1.8rem, 2.1vw, 6rem);
 }
 
-h2 {
+h2,
+.ingredients__heading p {
     font-size: clamp(1.3rem, 1.68vw, 5rem);
     margin-bottom: 0.7rem;
 }
@@ -99,10 +106,6 @@ ol {
     margin-top: 0;
     padding-left: clamp(1.25rem, 2vw, 2.5rem);
     font-size: clamp(0.8rem, 1.25vw, 4rem);
-}
-
-.portions {
-    font-weight: normal;
 }
 
 /* ----------------------- */
