--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,10 @@
 /* ----------------------- */
-/*1. BASE STYLES */
+/* || GLOBAL STYLES */
 /* ----------------------- */
+/* :root {
+
+} */
+
 html {
     font-size: 100%;
 }
@@ -9,6 +13,27 @@ body {
     font-family: "Open Sans", Arial, sans-serif;
     background-color: #a100004d;
 }
+
+
+/* ----------------------- */
+/* || COMPOSITION */
+/* ----------------------- */
+
+
+/* ----------------------- */
+/* || UTILITY */
+/* ----------------------- */
+
+
+/* ----------------------- */
+/* || BLOCK */
+/* ----------------------- */
+
+
+/* ----------------------- */
+/* || EXCEPTION */
+/* ----------------------- */
+
 
 /* ----------------------- */
 /* 2. LAYOUT */
@@ -19,13 +44,13 @@ main {
     background-color: #fcfcfc;
 }
 
-article.recipe {
+.recipe {
     max-width: 100%;
     padding: clamp(1.25rem, 3.35vw, 4rem);
     padding-top: 0;
 }
 
-.recipe .headline-img {
+.headline-img {
     margin: 0 calc(clamp(1.25rem, 3.35vw, 4rem) * -1);
     margin-bottom: clamp(1.25rem, 3.35vw, 4rem);
     aspect-ratio: 5/2;
@@ -63,20 +88,19 @@ section {
     margin-bottom: 0;
 }
 
-.serving-suggestions__images {
+.serving-suggestions__list {
     display: flex;
-    gap: 2%;
-}
+    gap: 2%; /* magic number? */
 
-.serving-suggestions__fig {
-    display: block;
-    width: 49%;
-}
+    li {
+        width: 49%; /* magic number? */
 
-.serving-suggestions__fig img {
-    width: 100%;
-    aspect-ratio: 6/5;
-    object-fit: cover;
+        img {
+            width: 100%;
+            aspect-ratio: 6/5;
+            object-fit: cover;
+        }
+    }
 }
 
 /* ----------------------- */
@@ -121,22 +145,22 @@ ol {
         width: 100vw;
     }
 
-    .recipe .headline-img {
+    .headline-img {
         aspect-ratio: 1/1.13;
     }
 
-    .serving-suggestions__images {
+    .serving-suggestions__list {
         flex-direction: column;
         gap: 1.5rem;
         height: auto;
-    }
 
-    .serving-suggestions__fig {
-        width: 100%;
-    }
+        li {
+            width: 100%;
 
-    .serving-suggestions__fig img {
-        aspect-ratio: 4/5;
+            img {
+                aspect-ratio: 4/5;
+            }
+        }
     }
 }
 
